--- a/SECB/app/build.gradle
+++ b/SECB/app/build.gradle
@@ -15,7 +15,7 @@ android {
         exclude 'META-INF/NOTICE.txt'
     }
 
-    compileSdkVersion 21
+    compileSdkVersion 22
     buildToolsVersion '22.0.1'
 
     defaultConfig {
@@ -35,15 +35,14 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.google.android.gms:play-services:7.3.0'
     compile 'commons-io:commons-io:+'
     compile 'org.apache.httpcomponents:httpmime:4.2.3'
     compile 'io.segment.analytics.android:flurry:1.3.1'
-    compile 'org.twitter4j:twitter4j-core:4.0.3'
-    compile 'com.googlecode.libphonenumber:libphonenumber:7.0.5'
+//    compile 'org.twitter4j:twitter4j-core:4.0.3'
+//    compile 'com.googlecode.libphonenumber:libphonenumber:7.0.5'
     //    compile 'org.apache.axis:axis:1.4'
-    //    compile 'com.android.support:recyclerview-v7:+'
-    compile files('libs/android-support-v7-recyclerview.jar')
-    compile files('libs/nineoldandroids-2.4.0.jar')
+//    compile 'com.android.support:cardview-v7:22.0.+'
+    compile 'com.android.support:recyclerview-v7:22.1.1'
 }
