--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.secb.android" >
+    package="com.secb.android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".view.SECBApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".view.SECBApplication">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".view.SplashActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".view.LoginActivity"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:name=".view.SignUpActivity"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:name=".view.ResetPasswordActivity"
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
