--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity
             android:name=".view.ResetPasswordActivity"
             android:label="@string/app_name"></activity>
+        <activity
+            android:name=".view.MainActivity"
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
