--- a/SECB/app/build.gradle
+++ b/SECB/app/build.gradle
@@ -40,9 +40,10 @@ dependencies {
     compile 'commons-io:commons-io:+'
     compile 'org.apache.httpcomponents:httpmime:4.2.3'
     compile 'io.segment.analytics.android:flurry:1.3.1'
-//    compile 'org.twitter4j:twitter4j-core:4.0.3'
-//    compile 'com.googlecode.libphonenumber:libphonenumber:7.0.5'
+    //    compile 'org.twitter4j:twitter4j-core:4.0.3'
+    //    compile 'com.googlecode.libphonenumber:libphonenumber:7.0.5'
     //    compile 'org.apache.axis:axis:1.4'
-//    compile 'com.android.support:cardview-v7:22.0.+'
+    //    compile 'com.android.support:cardview-v7:22.0.+'
     compile 'com.android.support:recyclerview-v7:22.1.1'
+    compile 'com.wefika:flowlayout:0.4.1'
 }
