--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -2,13 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.secb.android">
 
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:name=".view.SECBApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCtGCSEbrYh9L3mdyqjBOVwZgPf-g-9Das" />
+
         <activity
             android:name=".view.SplashActivity"
             android:label="@string/app_name">
