--- a/SECB/app/build.gradle
+++ b/SECB/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     //    compile 'com.android.support:cardview-v7:22.0.+'
     compile 'com.android.support:recyclerview-v7:22.1.1'
     compile 'com.wefika:flowlayout:0.4.1'
+    compile project (':library')
 }
