done :  - Media center (Gallery , Album)  - Filter layout animation direction
Not Done :
-apply fonts
-filter radioButtom
-filter arabic
-Map reload
-menu open same item
-tool bar back button
-add logout , language to menu
-sharing icon

-Not Done Pages :
 -language page after splash
   (first time open)
 -Eservices
 -Contact us
 -About us

--- a/SECB/app/build.gradle
+++ b/SECB/app/build.gradle
@@ -23,7 +23,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
     }
     buildTypes {
         release {
@@ -45,6 +45,7 @@ dependencies {
     //    compile 'org.apache.axis:axis:1.4'
     //    compile 'com.android.support:cardview-v7:22.0.+'
     compile 'com.android.support:recyclerview-v7:22.1.1'
+    compile 'com.android.support:cardview-v7:22.1.1'
     compile 'com.wefika:flowlayout:0.4.1'
     compile project (':library')
 }
