--- a/SECB/app/build.gradle
+++ b/SECB/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.1.1'
     compile 'com.android.support:cardview-v7:22.1.1'
     compile 'com.wefika:flowlayout:0.4.1'
+    compile 'com.google.code.gson:gson:2.2.4'
     compile project (':library')
 }
