--- a/SECB/app/build.gradle
+++ b/SECB/app/build.gradle
@@ -1,6 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release_signing {
+            keyAlias 'android_signature'
+            keyPassword 'user_9999'
+            storeFile file('D:/Media/Video/Tutorials/Android/Amir-Hakim/workspace/drd-secb/SECB/Signing_key/secb_key_store.keystore')
+            storePassword 'user_9999'
+        }
+        debug_release {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storeFile file('C:/Users/jo/.android/debug.keystore')
+            storePassword 'android'
+        }
+    }
     lintOptions {
         checkReleaseBuilds false
         // Or, if you prefer, you can continue to check for errors in release builds,
@@ -14,22 +28,34 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
-
     compileSdkVersion 22
     buildToolsVersion '21.1.2'
-
     defaultConfig {
         applicationId "com.secb.android"
         minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
         versionName "1.0.5"
+        /*signingConfig signingConfigs.release_signing*/
+        signingConfig signingConfigs.release_signing
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    /* productFlavors {
+         debug {
+             minSdkVersion 14
+             applicationId 'com.secb.android'
+             signingConfig signingConfigs.debug_release
+             targetSdkVersion 22
+             versionCode 1
+             versionName '1.0.5'
+         }
+     }*/
+    productFlavors {
     }
 }
 
@@ -48,6 +74,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.1.1'
     compile 'com.wefika:flowlayout:0.4.1'
     compile 'com.google.code.gson:gson:2.2.4'
-    compile "com.squareup.picasso:picasso:2.4.0"
-    compile project (':library')
+    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile project(':library')
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
