--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -13,9 +13,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
+        <!--Release-->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCtGCSEbrYh9L3mdyqjBOVwZgPf-g-9Das" />
+            android:value="AIzaSyArtLXnC_7JjMLx1uttqEHz-nJD1HA2Hi8" />
+        <!--Debug-->
+<!--
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCPxb5CR6Yh6JoU2snNNyWI9EYxjDO0LiA" />
+-->
 
         <activity
             android:name=".view.LanguageActivity"
