--- a/SECB/gradle.properties
+++ b/SECB/gradle.properties
@@ -16,3 +16,11 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+project.properties=D:\\Media\\Video\\Tutorials\\Android\\Amir-Hakim\\workspace\\drd-secb\\SECB\\project.properties
+
+RELEASE_STORE_FILE=D:\\Media\\Video\\Tutorials\\Android\\Amir-Hakim\\workspace\\drd-secb\\SECB\\Signing_key\\secb_key_store.keystore
+RELEASE_STORE_PASSWORD=user_9999
+RELEASE_KEY_ALIAS=android_signature
+RELEASE_KEY_PASSWORD=user_9999
