--- a/SECB/app/build.gradle
+++ b/SECB/app/build.gradle
@@ -29,7 +29,7 @@ android {
 //            storeFile file('D:/Media/Video/Tutorials/Android/Amir-Hakim/workspace/drd-secb/SECB/Signing_key/secb_key_store.keystore')
 //            storePassword 'user_9999'
 
-            storeFile file(RELEASE_STORE_FILE)
+//            storeFile file(RELEASE_STORE_FILE)
             storePassword RELEASE_STORE_PASSWORD
             keyAlias RELEASE_KEY_ALIAS
             keyPassword RELEASE_KEY_PASSWORD
@@ -96,7 +96,10 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.1.1'
     compile 'com.wefika:flowlayout:0.4.1'
     compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    compile 'com.squareup:otto:+'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0-RC2'
+    compile 'com.squareup.picasso:picasso:+'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
     compile project(':library')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
