--- a/SECB/app/build.gradle
+++ b/SECB/app/build.gradle
@@ -82,7 +82,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.google.android.gms:play-services:7.3.0'
     compile 'commons-io:commons-io:+'
@@ -96,11 +96,12 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.1.1'
     compile 'com.wefika:flowlayout:0.4.1'
     compile 'com.google.code.gson:gson:2.2.4'
-//    compile 'com.squareup:otto:+'
-//    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0-RC2'
-//    compile 'com.squareup.picasso:picasso:+'
+    //    compile 'com.squareup:otto:+'
+    //    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0-RC2'
+    //    compile 'com.squareup.picasso:picasso:+'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile project(':library')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'net.danlew:android.joda:2.9.0'
+    compile project(':addthislib')
 }
