--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -65,7 +65,16 @@
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
+            ></activity>
+
+        <activity
+            android:name=".view.YoutubePlayerActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|screenSize"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             ></activity>
 
         <!-- Addthis library -->
