--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -72,6 +72,12 @@
             android:name=".view.NewsActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"></activity>
+        <activity
+            android:name=".view.EventsActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"></activity>
+
+
 
         <activity
             android:name=".view.YoutubePlayerActivity"
