--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
-            ></activity>
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".view.NewsActivity"
             android:label="@string/app_name"
@@ -82,10 +82,10 @@
             ></activity>
 
         <!-- Addthis library -->
-        <activity android:name="com.addthis.ui.activities.ATAllServiceActivity" />
-        <activity android:name="com.addthis.ui.activities.ATFavoriteServiceActivity" />
-        <activity android:name="com.addthis.ui.activities.ATShareActivity" />
-        <activity android:name="com.addthis.ui.activities.ATActivityGroup" android:configChanges="orientation" />
+        <activity android:name="com.addthis.ui.activities.ATAllServiceActivity" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"/>
+        <activity android:name="com.addthis.ui.activities.ATFavoriteServiceActivity" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"/>
+        <activity android:name="com.addthis.ui.activities.ATShareActivity" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"/>
+        <activity android:name="com.addthis.ui.activities.ATActivityGroup" android:configChanges="orientation" android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"/>
 
 
     </application>
