--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -76,6 +76,14 @@
             android:name=".view.EventsActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"></activity>
+        <activity
+            android:name=".view.EservicesActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"></activity>
+        <activity
+            android:name=".view.EguideActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"></activity>
 
 
 
