-Gallery Activity ,About Us Activity ,Contact  Us Activity. -View All Events : display events un filtered -Organizers list: commented the remove un completed items. NOTE : The Back stack is not running well

--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -84,6 +84,20 @@
             android:name=".view.EguideActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"></activity>
+        <activity
+            android:name=".view.GalleryActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"></activity>
+
+        <activity
+            android:name=".view.AboutUsActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"></activity>
+
+        <activity
+            android:name=".view.ContactUsActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"></activity>
 
 
 
