--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -96,6 +96,7 @@
 
         <activity
             android:name=".view.ContactUsActivity"
+            android:launchMode="singleInstance"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"></activity>
 
