--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -71,34 +71,41 @@
         <activity
             android:name=".view.NewsActivity"
             android:label="@string/app_name"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".view.EventsActivity"
             android:label="@string/app_name"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".view.EservicesActivity"
             android:label="@string/app_name"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".view.EguideActivity"
             android:label="@string/app_name"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".view.GalleryActivity"
             android:label="@string/app_name"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="adjustPan"></activity>
 
         <activity
             android:name=".view.AboutUsActivity"
             android:label="@string/app_name"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="adjustPan"></activity>
 
         <activity
             android:name=".view.ContactUsActivity"
             android:launchMode="singleInstance"
             android:label="@string/app_name"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="adjustPan"></activity>
 
 
 
