--- a/SECB/app/src/main/AndroidManifest.xml
+++ b/SECB/app/src/main/AndroidManifest.xml
@@ -100,9 +100,10 @@
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="adjustPan"></activity>
 
+<!--        android:launchMode="singleInstance"-->
         <activity
             android:name=".view.ContactUsActivity"
-            android:launchMode="singleInstance"
+
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="adjustPan"></activity>
